tests/negative/LoopStm.tst

void foo()
{
	loop {
		redo;
	}
}

========

LoopStm.syp: redo invalid outside a loop/switch block
found 1 errors
